# my-mas5

./: LICENSE  README.md  mas-the-plan.md  product_report.md  pyproject.toml  report.md
src/my_mas/: crew.py  main.py  updated-crew.py
src/my_mas/config/: agents.yaml  tasks.yaml  updated-agents.yaml  updated-tasks.yaml
